<resources>
    <string name="app_name">Movie App Tutor</string>
    <string name="search">Search</string>
    <string name="city">Select Your \n City</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies">Movies</string>
    <string name="shows">Shows</string>
    <string name="drama">Drama</string>
    <string name="coming_soon">Coming soon</string>
    <string name="new_release">New release</string>
    <string name="apply_promo_code">Apply promo code</string>
    <string name="watch_trailer">Watch trailer</string>
    <string name="for_offer">for offer</string>
    <string name="aquaman">Aquaman</string>
    <string name="epilogue">Half-human, half-Atlantean Arthur is born with the ability to\ncommunicate with marine creatures. He goes on a quest to retrieve the legendary Trident of Atlan and protect the water world...</string>
    <string name="read_more">Read more</string>
    <string name="english">English</string>
    <string name="imax">IMAX</string>
    <string name="_3d">3D</string>
    <string name="_2d">2D</string>
    <string name="cast">Cast</string>
</resources>