<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Movies">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/movies"
        android:textSize="20sp"
        android:orientation="vertical"
        android:textStyle="bold">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_release"
            android:textSize="32sp"
            />

        <com.kulex.movieapptutor.NestedScrollableHost
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/recycler_view_item" />
        </com.kulex.movieapptutor.NestedScrollableHost>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coming_soon"
            android:textSize="32sp"/>

        <com.kulex.movieapptutor.NestedScrollableHost
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/recycler_view_item" />
        </com.kulex.movieapptutor.NestedScrollableHost>
    </LinearLayout>
</ScrollView>